Fix scrollbars on windows

--- a/src/components/App/styles.css
+++ b/src/components/App/styles.css
@@ -19,6 +19,9 @@
 .content {
   height: calc(100vh - 50px);
   overflow-y: scroll;
+  width: 100%;
+  padding-right: 20px;
+  box-sizing: content-box;
 
   @media only screen and (max-width: 720px) {
     height: auto;
